--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,13 +81,22 @@
     <string name="nav_header_subtitle">Multiboot for Android - the other way</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="aboutLibraries_description_showIcon" translatable="false">true</string>
     <string name="aboutLibraries_description_showVersion" translatable="false">true</string>
-    <string name="aboutLibraries_description_text">@string/nav_header_subtitle</string>
+    <string name="aboutLibraries_description_text" translatable="false">Android Boot Manager
+Multiboot for Android - the other way
+
+Copyright 2020 The Android Boot Manager Project
+Licensed under the GNU General Public License Version 3 or later
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.</string>
     <string name="home_installedWorking_img">Checkmark/Cross to represent installed state</string>
     <string name="home_installedWorking_text">Failed to load state</string>
     <string name="home_installedWorking_ok">Installed &amp; working</string>
